[gd_scene load_steps=11 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://3D_level/Computer.gd" type="Script" id=2]
[ext_resource path="res://3D_level/Comp_screen.gd" type="Script" id=3]
[ext_resource path="res://2D_minigame/Minigame.tscn" type="PackedScene" id=4]
[ext_resource path="res://3D_level/objektit/keyboard.tscn" type="PackedScene" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )

[sub_resource type="PlaneMesh" id=2]
size = Vector2( 1.7, 1.7 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.607843, 0.607843, 0.607843, 1 )

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="CylinderShape" id=5]
radius = 3.0

[node name="Computer" type="Spatial"]
script = ExtResource( 2 )

[node name="Comp_screen" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, -1.62921e-08, 0, 0.95 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
script = ExtResource( 3 )

[node name="Viewport" type="Viewport" parent="Comp_screen"]
size = Vector2( 1024, 600 )
hdr = false
usage = 0
render_target_v_flip = true

[node name="Minigame" parent="Comp_screen/Viewport" instance=ExtResource( 4 )]

[node name="CSGBox" type="CSGBox" parent="."]
use_collision = true
material = SubResource( 3 )

[node name="CSGBox" type="CSGBox" parent="CSGBox"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 1 )
operation = 2
width = 1.8
height = 1.8
depth = 0.2
material = SubResource( 4 )

[node name="Area" type="Area" parent="." groups=[
"action",
]]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="keyboard" parent="." instance=ExtResource( 5 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -0.981268, 1.54574 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
